// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqlmodules provide autocrud works with single parameter set 1`] = `
Object {
  "id": 100,
}
`;

exports[`sqlmodules provide autocrud works with single parameter set 2`] = `
Array [
  Object {
    "id": 1,
    "name": "planes",
  },
  Object {
    "id": 2,
    "name": "trains",
  },
  Object {
    "id": 100,
    "name": "hi there",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set 3`] = `
Object {
  "id": 100,
  "name": "hi there",
}
`;

exports[`sqlmodules provide autocrud works with single parameter set 4`] = `
Object {
  "id": 100,
  "name": "super",
}
`;

exports[`sqlmodules provide autocrud works with single parameter set 5`] = `
Object {
  "id": 100,
  "name": "super",
}
`;

exports[`sqlmodules provide autocrud works with single parameter set 6`] = `
Object {
  "id": 100,
}
`;

exports[`sqlmodules provide autocrud works with single parameter set 7`] = `
Array [
  Object {
    "id": 1,
    "name": "planes",
  },
  Object {
    "id": 2,
    "name": "trains",
  },
]
`;

exports[`sqlmodules provide autocrud works with single parameter set 8`] = `
Array [
  Object {
    "id": 1,
  },
  Object {
    "id": 2,
  },
]
`;
